@@ -11,6 +11,7 @@ import com.nhnacademy.book.book.exception.CategoryNotFoundException;
 import com.nhnacademy.book.book.repository.BookCategoryRepository;
 import com.nhnacademy.book.book.repository.BookRepository;
 import com.nhnacademy.book.book.repository.CategoryRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,6 +19,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 @Transactional
 public class BookCategoryService {
@@ -25,14 +27,6 @@ public class BookCategoryService {
     private final BookCategoryRepository bookCategoryRepository;
     private final BookRepository bookRepository;
     private final CategoryRepository categoryRepository;
-    private final CategoryService categoryService;
-
-    public BookCategoryService(BookCategoryRepository bookCategoryRepository, BookRepository bookRepository, CategoryRepository categoryRepository, CategoryService categoryService) {
-        this.bookCategoryRepository = bookCategoryRepository;
-        this.bookRepository = bookRepository;
-        this.categoryRepository = categoryRepository;
-        this.categoryService = categoryService;
-    }
 
     public BookCategoryResponseDto createBookCategory(BookCategoryRequestDto bookCategoryRequestDto) {
         Book book = bookRepository.findById(bookCategoryRequestDto.getBookId())
@@ -53,11 +47,10 @@ public class BookCategoryService {
     }
 
     public List<CategoryResponseDto> findCategoriesByBookId(Long bookId) {
-        Book book = bookRepository.findById(bookId)
+        bookRepository.findById(bookId)
                 .orElseThrow(() -> new BookNotFoundException("Book not found"));
 
         List<Category> categories = bookCategoryRepository.findCategoriesByBookId(bookId);
-
 
 
         // Category 엔티티를 CategoryResponseDto로 변환하여 반환
@@ -72,7 +65,7 @@ public class BookCategoryService {
                                     child.getParentCategory() != null ? child.getParentCategory().getCategoryId() : null,
                                     new ArrayList<>()  // 자식 카테고리의 자식들을 추가할 경우 여기에 추가
                             ))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     return new CategoryResponseDto(
                             category.getCategoryId(),
@@ -82,9 +75,6 @@ public class BookCategoryService {
                             childCategories
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
-
 }
